--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,28 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.angello10.live2dwallpaper" >
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-feature android:name="android.software.live_wallpaper" android:required="true" />
+<manifest
+	xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.angello10.live2dwallpaper"
+	>
+	<uses-permission
+		android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+	/>
+	<uses-feature
+		android:name="android.software.live_wallpaper" android:required="true"
+	/>
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-		android:resizeableActivity="true">
+		android:resizeableActivity="true"
+		>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+			>
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action
+					android:name="android.intent.action.MAIN"
+				/>
+                <category
+					android:name="android.intent.category.LAUNCHER"
+				/>
             </intent-filter>
         </activity>
-		<service android:label="@string/app_name" android:name="com.angello10.live2dwallpaper.Live2DWallPaper" android:permission="android.permission.BIND_WALLPAPER">
+		<service
+			android:label="@string/app_name"
+			android:name="com.angello10.live2dwallpaper.Live2DWallPaper"
+			android:permission="android.permission.BIND_WALLPAPER"
+			>
 			<intent-filter>
-				<action android:name="android.service.wallpaper.WallpaperService" />
+				<action
+					android:name="android.service.wallpaper.WallpaperService"
+				/>
 			</intent-filter>
-			<meta-data android:name="android.service.wallpaper"
-				android:resource="@xml/mywallpaper" />
+			<meta-data
+				android:name="android.service.wallpaper"
+				android:resource="@xml/mywallpaper"
+			/>
 		</service>
     </application>
 
